# nfl_bdb_neural_net

./: NFL Big Data Bowl.Rproj  combined_2023_w09_game_2023110500.csv  lagged_2023_w09_game_2023110500.csv  longformat.ipynb  main.py  maryellen_code.ipynb  meeting.ipynb  processed_one_game.csv  project.ipynb  pyproject.toml  submission.ipynb
