[project]
name = "nfl-bdb-neural-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "tensorflow",
    "matplotlib-inline>=0.2.1",
    "ipykernel>=7.1.0",
]

